Login and Signup complete

--- a/public/assets/components/authentication/registerForm.html
+++ b/public/assets/components/authentication/registerForm.html
@@ -1,8 +1,8 @@
 <div class="col-md-2 col-md-offset-5">
-<img class="margin-elements img-responsive logo center-block" src="images/new_icc_logo_ltblue1.png" alt="ICC Logo"/>
+  <img class="margin-elements img-responsive logo center-block" src="assets/images/appimage.jpg" alt="ShareIdea"/>
 <form>
     <fieldset class="form-group">
-        <span class="pull-left" style="padding-top:10px;"><mark class="text-success "><b>{{message}}</b></mark></span>
+        <span class="pull-left" ><mark class="text-success "><b>{{message}}</b></mark></span>
     </fieldset>
     <fieldset class="form-group">
         <input type="text" placeholder="First Name" ng-model="firstName" required>
@@ -20,6 +20,5 @@
         <button type="submit" class="btn btn-primary btn-block" ng-click="register();">Register</button>
     </fieldset>
     <a href="/">Already have an account? Sign In Here!</a>
-{{message}}
 </form>
 </div>
