--- a/public/assets/components/authentication/signInForm.html
+++ b/public/assets/components/authentication/signInForm.html
@@ -1,13 +1,13 @@
-<div class="col-md-2 col-md-offset-5 ">
-<img class="margin-elements img-responsive logo center-block" src="assets/images/appimage.jpg" alt="ICC Logo"/>
+<div class="col-md-2 col-md-offset-5">
+<img class="margin-elements img-responsive logo center-block" src="assets/images/appimage.jpg" alt="ShareIdea"/>
 <form>
     <fieldset class="form-group padding-top">
         <input type="email" placeholder="Email" ng-model="email" required>
     </fieldset>
-    <fieldset class="form-group padding-top">
+    <fieldset class="form-group ">
         <input type="password" placeholder="Password" ng-model="password" required>
     </fieldset>
-    <fieldset class="form-group padding-top">
+    <fieldset class="form-group">
         <button type="submit" class="btn btn-primary btn-block" ng-click="signIn();">Sign In</button>
     </fieldset>
     <a href="register">Don't have an account? Register Here!</a>
@@ -15,6 +15,5 @@
     <a href="manager">manager List</a>
     <a href="purchaser">purchaser List</a>
     {{message}}
-
 </form>
 </div>
