--- a/public/assets/components/authentication/registerForm.html
+++ b/public/assets/components/authentication/registerForm.html
@@ -1,10 +1,10 @@
-<div class="col-md-2 col-md-offset-5">
-  <img class="margin-elements img-responsive logo center-block" src="assets/images/appimage.jpg" alt="ShareIdea"/>
+<div class="col-md-2 col-md-offset-5 margin-authentication">
+
 <form>
     <fieldset class="form-group">
         <span class="pull-left" ><mark class="text-success "><b>{{message}}</b></mark></span>
     </fieldset>
-    <fieldset class="form-group">
+    <fieldset class="form-group padding-top">
         <input type="text" placeholder="First Name" ng-model="firstName" required>
     </fieldset>
     <fieldset class="form-group">
