--- a/public/assets/components/authentication/signInForm.html
+++ b/public/assets/components/authentication/signInForm.html
@@ -14,7 +14,7 @@
         <button type="submit" class="btn btn-primary btn-block" ng-click="signIn();">Sign In</button>
     </fieldset>
     <a href="register">Don't have an account? Register Here!</a>
-    <a href="employee">employee List</a>
+    <a href="post">Post New</a>
     <a href="manager">manager List</a>
     <a href="purchaser">purchaser List</a>
 </form>
