create and display articles

--- a/public/assets/components/authentication/signInForm.html
+++ b/public/assets/components/authentication/signInForm.html
@@ -1,5 +1,4 @@
 <div class="col-md-2 col-md-offset-5 margin-authentication">
-
 <form>
     <fieldset class="form-group">
       <span class="pull-left" ><mark class="text-success "><b>{{message}}</b></mark></span>
@@ -15,7 +14,7 @@
     </fieldset>
     <a href="register">Don't have an account? Register Here!</a>
     <a href="post">Post New</a>
-    <a href="manager">manager List</a>
+    <a href="allArticles">All Articles</a>
     <a href="purchaser">purchaser List</a>
 </form>
 </div>
