sign in changes

--- a/public/assets/components/authentication/signInForm.html
+++ b/public/assets/components/authentication/signInForm.html
@@ -15,6 +15,6 @@
     <a href="register">Don't have an account? Register Here!</a>
     <a href="post">Post New</a>
     <a href="allArticles">All Articles</a>
-    <a href="purchaser">purchaser List</a>
+    <a href="userDashboard">User List</a>
 </form>
 </div>
