--- a/public/assets/components/articleListings/article.html
+++ b/public/assets/components/articleListings/article.html
@@ -1,5 +1,5 @@
 <input type="text" ng-model="search" class="form-control" style="width:20%;display:inline;margin-right:30%" placeholder="Search">
-<div class="col-md-8 col-md-offset-2 jumbotron">
+<div class="col-md-8 col-md-offset-2 padding-top">
 <table class="table " >
   <tbody >
       <tr dir-paginate="cut in allArticles|orderBy:sort:true|filter:search|itemsPerPage:10" ng-click="display(cut)">
