--- a/public/assets/components/userArticles/userArticle.html
+++ b/public/assets/components/userArticles/userArticle.html
@@ -1,7 +1,7 @@
 <div class="col-md-8 col-md-offset-4">
 <input type="text" ng-model="search" class="form-control" style="width:20%;display:inline;margin-right:30%" placeholder="Search">
 <button type="submit" class="btn btn-primary"  ng-click="post()">Create Article</button></div>
-<div class="col-md-8 col-md-offset-2 jumbotron">
+<div class="col-md-8 col-md-offset-2 padding-top">
 <table class="table " >
   <tbody >
       <tr dir-paginate="cut in allArticles|orderBy:sort:true|filter:search|itemsPerPage:10" ng-click="display(cut)">
